--- a/gb/19/11/22/n11673260.md
+++ b/gb/19/11/22/n11673260.md
@@ -1,61 +1,58 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/n24hr.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/news392.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/news2007.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/news2008.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/ncyule.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/nsc1002.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wdlxhh2447/djy/blob/master/gb/9p.md#1">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/wdlxhh2447/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/wdlxhh2447/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/wdlxhh2447/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/wdlxhh2447/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ</a> | <a target="_blank" href="https://github.com/wdlxhh2447/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/wdlxhh2447/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/wdlxhh2447/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/wdlxhh2447/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/wdlxhh2447/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/wdlxhh2447/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/wdlxhh2447/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/wdlxhh2447/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/wdlxhh2447/www/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/wdlxhh2447/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/wdlxhh2447/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/wdlxhh2447/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/wdlxhh2447/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/wdlxhh2447/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/wdlxhh2447/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/wdlxhh2447/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/wdlxhh2447/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/wdlxhh2447/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/wdlxhh2447/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/wdlxhh2447/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/wdlxhh2447/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/wdlxhh2447/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/wdlxhh2447/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>»·±£²ÍÌüÊýÁ¿¾Ó¹Ú   ÒéÔ±°ì×À¼¥:¼õËÜº°¼ÙµÄ</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/11/33e7fa520a6430655ab4a4ced773ddfd-600x400.jpg" />
-<h6>Ì¨ÖÐÊÐÒéÔ±ÔÚÒé³¡°ìÁËÒ»×À²ÍÌüÊµ¾³Ðã£¬Åú¾ÍÏñ³ÔÏÂÒ»Õû×ÀµÄ¡°ËÜ»¯¼Á¡±¡££¨»ÆÓñÑà£¯´ó¼ÍÔª£©
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/10a.jpg" title="ç‹¬å®¶"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/12a.jpg" title="å¤´æ¡"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/qtwlwd303/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/qtwlwd303/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/qtwlwd303/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>çŽ¯ä¿é¤åŽ…æ•°é‡å±…å†    è®®å‘˜åŠžæ¡Œè®¥:å‡å¡‘å–Šå‡çš„</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/11/33e7fa520a6430655ab4a4ced773ddfd-600x400.jpg" />
+<h6>å°ä¸­å¸‚è®®å‘˜åœ¨è®®åœºåŠžäº†ä¸€æ¡Œé¤åŽ…å®žå¢ƒç§€ï¼Œæ‰¹å°±åƒåƒä¸‹ä¸€æ•´æ¡Œçš„â€œå¡‘åŒ–å‰‚â€ã€‚ï¼ˆé»„çŽ‰ç‡•ï¼å¤§çºªå…ƒï¼‰
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê11ÔÂ22ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕß»ÆÓñÑàÌ¨ÍåÌ¨ÖÐ±¨µ¼£©Ì¨ÖÐÊÐ³¬¹ý40¼äÒÔÉÏµÄ<a href="https://github.com/wdlxhh2447/djy/blob/master/gb/tag/%E7%8E%AF%E4%BF%9D%E9%A4%90%E5%8E%85.md">»·±£²ÍÌü</a>¡¢¾ÓÈ«Ì¨µÚÒ»£¬µ«·»¼ä²Í¹ÝÊ¹ÓÃÒ»´ÎÐÔ<a href="https://github.com/wdlxhh2447/djy/blob/master/gb/tag/%E5%85%8D%E6%B4%97%E9%A4%90%E5%85%B7.md">ÃâÏ´²Í¾ß</a>¼°ËÜ½ºÖÆÆ·ÈÔ·Ç³£Æµ·±¡£ÊÐÒéÔ±Ö£¹¦½øÖ¸³ö£¬¾ÍÁ¬Ã¿ÄêÊÐ¸®¾Ù°ìµÄ»·±£Ö¾¹¤¶Ó¾Û²Í¡¢ÀïÁÚ³¤ÎÄ¿µ»î¶¯µÄ²Í»áµØµã£¬Ò²¶¼³£³£Ñ¡Ôñ²»»·±£µÄ¹«Â·²ÍÌüÓÃ²Í£¬¼ÓÉÏÈÈÌÀ¼°¾ÆË®£¬Ò»¶Ù·¹³ÔÏÂÀ´£¬²»ÖªÓÐ¶àÉÙËÜ»¯¼ÁÏÂ¶Ç¡£</p>
-<p>ÊÐÒéÔ±Ö£¹¦½ø¡¢Ê©Ö¾²ý¡¢ÁÖÆí·é¡¢»ÆÊØ´ïÕë¶ÔÒ»´ÎÐÔ²Í¾ßÒéÌâÌá³öÖÊÑ¯¡£Ö£¹¦½øÇÇ×°³øÊ¦¡¢ÔÚÒé³¡°ìÁËÒ»×ÀÊµ¾³Ðã£¬»¹Ô­¹«Â·²ÍÌüµÈ´óÐÍÑç»á²Í¹Ý¡¢Ò¹ÊÐÌ¯ÉÌµÄÊ¹ÓÃ²Í¾ßÇé¿ö¡£ËûÅú£¬ÓÃµÄÈ«Ê½ËÜ½º±­Íë¡¢ÃÀÄÎÃ×²Í¾ß¡¢»¹ÓÐÖ½ÈÝÆ÷ËÜ½ºÄ¤£¬´Ó×À²¼¿ªÊ¼£¬¼òÖ±¾ÍÊÇÒ»Õû×ÀµÄ¡°ËÜ»¯¼Á¡±¡£</p>
-<p>Ö£¹¦½øÖ¸³ö£¬È«Ì¨ÖÐËäÓÐ44¼ÒÐÇ¼¶»·±£²Í¹Ý£¬¸ß¾ÓÈ«¹úµÚÒ»£¬µ«Ì¨ÖÐÊÐÃñÈ´ºÜÎÞ¸Ð£¡ËûËá£¬¾ÍÁ¬ÉíÎª´ó¼×ÈËµÄ¸±ÊÐ³¤³Â×Ó¾´£¬Ò²²»ÖªµÀ×Ô¼º´ó¼×µÄ»·±£²Í¹ÝÔÚÄÄÀï£¬¡°<a href="https://github.com/wdlxhh2447/djy/blob/master/gb/tag/%E5%87%8F%E5%A1%91.md">¼õËÜ</a>¸ù±¾º°¼ÙµÄ?£¡¡±</p>
-<p>Ö£¹¦½øºôÓõÊÐ¸®µÍÌ¼°ì¹«ÊÒÓ¦´øÍ·£¬Ö÷¶¯½áºÏÅ©Òµ¾Ö£¨Éú²úÂÄÀú£©¡¢»·±£¾Ö£¨ÎÞËÜ»¯¼Á¡¢Ò»´ÎÐÔ²Í¾ß£©¡¢ÎÀÉú¾Ö£¨ÎÞ²»µ±Ìí¼ÓÎï¡¢Ê³°²»·¾³£©¼°¾­·¢¾Ö£¨½±ÀøÍÆ¹ã£©×é³É¿ç¾Ö´¦µÄ¸¨µ¼ÍÅ£¬ÔÚÉ½º£ÊÐÍÍ¸÷Ñ¡ÔñÒ»¼ä±ê¸ÍÊ¾·¶²ÍÌü¸¨µ¼×ªÐÍ£¬´òÔìÎÞ¶¾¡¢È¥ËÜÐÇ¼¶»·±£±ê¸Í²ÍÌü¡£</p>
-<p>»·±£¾Ö»ØÓ¦£¬ÒÑÖ÷¶¯ÅÉÔ±°Ý·Ã²Í¹Ý£¬¹ÄÀø¼ÓÈë»·±£²Í¹Ý£¬²¢Ã¿Äê¾Ù°ìÂÌÉ«Ïû·Ñ±íÑï´ó»á£¬ÇëÊÐ¸®³¤¹Ù¹«¿ª±íÑïÓÅÁ¼»·±£²Í¹Ý£¬Ôö¼Ó»·±£²Í¹ÝÆØ¹â¶È£»Òé»áÏÖ³¡Ò²³ÐÅµ£¬½«¸ÄÉÆ»·±£Ö¾¹¤µÈÊÐ¸®»î¶¯µÄÓÃ²Í»î¶¯Æ·ÖÊ¡£¡ó</p>
-<p>ÔðÈÎ±à¼­£ºêÅ×÷</p>
+<p>ã€å¤§çºªå…ƒ2019å¹´11æœˆ22æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…é»„çŽ‰ç‡•å°æ¹¾å°ä¸­æŠ¥å¯¼ï¼‰å°ä¸­å¸‚è¶…è¿‡40é—´ä»¥ä¸Šçš„<ahref="https://github.com/qtwlwd303/djy/blob/master/gb/tag/%E7%8E%AF%E4%BF%9D%E9%A4%90%E5%8E%85.md#1">çŽ¯ä¿é¤åŽ…</a>ã€å±…å…¨å°ç¬¬ä¸€ï¼Œä½†åŠé—´é¤é¦†ä½¿ç”¨ä¸€æ¬¡æ€§<ahref="https://github.com/qtwlwd303/djy/blob/master/gb/tag/%E5%85%8D%E6%B4%97%E9%A4%90%E5%85%B7.md#1">å…æ´—é¤å…·</a>åŠå¡‘èƒ¶åˆ¶å“ä»éžå¸¸é¢‘ç¹ã€‚å¸‚è®®å‘˜éƒ‘åŠŸè¿›æŒ‡å‡ºï¼Œå°±è¿žæ¯å¹´å¸‚åºœä¸¾åŠžçš„çŽ¯ä¿å¿—å·¥é˜Ÿèšé¤ã€é‡Œé‚»é•¿æ–‡åº·æ´»åŠ¨çš„é¤ä¼šåœ°ç‚¹ï¼Œä¹Ÿéƒ½å¸¸å¸¸é€‰æ‹©ä¸çŽ¯ä¿çš„å…¬è·¯é¤åŽ…ç”¨é¤ï¼ŒåŠ ä¸Šçƒ­æ±¤åŠé…’æ°´ï¼Œä¸€é¡¿é¥­åƒä¸‹æ¥ï¼Œä¸çŸ¥æœ‰å¤šå°‘å¡‘åŒ–å‰‚ä¸‹è‚šã€‚</p>
+<p>å¸‚è®®å‘˜éƒ‘åŠŸè¿›ã€æ–½å¿—æ˜Œã€æž—ç¥ˆçƒ½ã€é»„å®ˆè¾¾é’ˆå¯¹ä¸€æ¬¡æ€§é¤å…·è®®é¢˜æå‡ºè´¨è¯¢ã€‚éƒ‘åŠŸè¿›ä¹”è£…åŽ¨å¸ˆã€åœ¨è®®åœºåŠžäº†ä¸€æ¡Œå®žå¢ƒç§€ï¼Œè¿˜åŽŸå…¬è·¯é¤åŽ…ç­‰å¤§åž‹å®´ä¼šé¤é¦†ã€å¤œå¸‚æ‘Šå•†çš„ä½¿ç”¨é¤å…·æƒ…å†µã€‚ä»–æ‰¹ï¼Œç”¨çš„å…¨å¼å¡‘èƒ¶æ¯ç¢—ã€ç¾Žå¥ˆç±³é¤å…·ã€è¿˜æœ‰çº¸å®¹å™¨å¡‘èƒ¶è†œï¼Œä»Žæ¡Œå¸ƒå¼€å§‹ï¼Œç®€ç›´å°±æ˜¯ä¸€æ•´æ¡Œçš„â€œå¡‘åŒ–å‰‚â€ã€‚</p>
+<p>éƒ‘åŠŸè¿›æŒ‡å‡ºï¼Œå…¨å°ä¸­è™½æœ‰44å®¶æ˜Ÿçº§çŽ¯ä¿é¤é¦†ï¼Œé«˜å±…å…¨å›½ç¬¬ä¸€ï¼Œä½†å°ä¸­å¸‚æ°‘å´å¾ˆæ— æ„Ÿï¼ä»–é…¸ï¼Œå°±è¿žèº«ä¸ºå¤§ç”²äººçš„å‰¯å¸‚é•¿é™ˆå­æ•¬ï¼Œä¹Ÿä¸çŸ¥é“è‡ªå·±å¤§ç”²çš„çŽ¯ä¿é¤é¦†åœ¨å“ªé‡Œï¼Œâ€œ<ahref="https://github.com/qtwlwd303/djy/blob/master/gb/tag/%E5%87%8F%E5%A1%91.md#1">å‡å¡‘</a>æ ¹æœ¬å–Šå‡çš„?ï¼â€</p>
+<p>éƒ‘åŠŸè¿›å‘¼åå¸‚åºœä½Žç¢³åŠžå…¬å®¤åº”å¸¦å¤´ï¼Œä¸»åŠ¨ç»“åˆå†œä¸šå±€ï¼ˆç”Ÿäº§å±¥åŽ†ï¼‰ã€çŽ¯ä¿å±€ï¼ˆæ— å¡‘åŒ–å‰‚ã€ä¸€æ¬¡æ€§é¤å…·ï¼‰ã€å«ç”Ÿå±€ï¼ˆæ— ä¸å½“æ·»åŠ ç‰©ã€é£Ÿå®‰çŽ¯å¢ƒï¼‰åŠç»å‘å±€ï¼ˆå¥–åŠ±æŽ¨å¹¿ï¼‰ç»„æˆè·¨å±€å¤„çš„è¾…å¯¼å›¢ï¼Œåœ¨å±±æµ·å¸‚å±¯å„é€‰æ‹©ä¸€é—´æ ‡ç«¿ç¤ºèŒƒé¤åŽ…è¾…å¯¼è½¬åž‹ï¼Œæ‰“é€ æ— æ¯’ã€åŽ»å¡‘æ˜Ÿçº§çŽ¯ä¿æ ‡ç«¿é¤åŽ…ã€‚</p>
+<p>çŽ¯ä¿å±€å›žåº”ï¼Œå·²ä¸»åŠ¨æ´¾å‘˜æ‹œè®¿é¤é¦†ï¼Œé¼“åŠ±åŠ å…¥çŽ¯ä¿é¤é¦†ï¼Œå¹¶æ¯å¹´ä¸¾åŠžç»¿è‰²æ¶ˆè´¹è¡¨æ‰¬å¤§ä¼šï¼Œè¯·å¸‚åºœé•¿å®˜å…¬å¼€è¡¨æ‰¬ä¼˜è‰¯çŽ¯ä¿é¤é¦†ï¼Œå¢žåŠ çŽ¯ä¿é¤é¦†æ›å…‰åº¦ï¼›è®®ä¼šçŽ°åœºä¹Ÿæ‰¿è¯ºï¼Œå°†æ”¹å–„çŽ¯ä¿å¿—å·¥ç­‰å¸‚åºœæ´»åŠ¨çš„ç”¨é¤æ´»åŠ¨å“è´¨ã€‚â—‡</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šæ˜±ä½œ</p>
 
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/11/22/n11673260.htm">»·±£²ÍÌüÊýÁ¿¾Ó¹Ú   ÒéÔ±°ì×À¼¥:¼õËÜº°¼ÙµÄ</a>
 
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/10/18/n11595976.htm">´óà¢Õ¨¼¦ ËÜ½º´ü×°ÈÈÊ³ Ð¡ÐÄ³Ô³ö×Ó¹¬ÄÚÄ¤°©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/10/n11511791.htm">¾­³£Ê¹ÓÃÃâÏ´¿êºÍÖ½±­£¿ÆäÊµÊÇ»¨Ç®ÂòÀ¬»ø</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/8/n11440116.htm">¼õËÜÊÇ¹ú¼ÊÇ÷ÊÆ Ì¨»·ÊðÍÆ¡°²»Ò»¶¨ÒªÓÃÃâÏ´²Í¾ß¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/26/n11347251.htm">½ûÓÃËÜ½ºÎü¹Ü Ì¨ÏÞËÜÐÂÖÆ7ÔÂÉÏÂ·</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/6/21/n10502866.htm">¼õËÜ²»ÄÜµÈ Ì¨»·ÍÅ£º±ðÈÃ·½±ã³ÉÎªµØÇòËÜ±ã</a></li>
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/11/21/n11672238.htm">ÉÙÅ®°ëÂã×¹Â¥Íö Â¼Ó°ÅÄµ½¸Û¾¯½«Å®Éú¶ª½øÂ·¹ì</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/21/n11671390.htm">´«Áõº×ÑûÃÀ·½µ½±±¾©ÃæÌ¸ ÃÀ·½ÌáÌõ¼þ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/20/n11669411.htm">ÖÜÏþ»Ô£ºÃÀ²ÎÔºÍ¨¹ýÉæ¸Û·¨°¸ ±±¾©Æï»¢ÄÑÏÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/20/n11668740.htm">ÔÚ¾©½Ø·ÃÈËÔ±Ë½´³ÃñÕ¬±»¿³³ÉÖØÉË£¨É÷Èë£©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/17/n11661605.htm">¡¾ÀúÊ·»Øíø¡¿´óÎÁÒß£º¸Ä³¯»»´úµÄÇ°×à</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/16/n11660363.htm">ÖÐ¹²ÆÆ»µÐÔÍÚ¾òÃ÷Ê®ÈýÁê Òý·¢¹îÒìÊÂ¼þ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/11/n11649041.htm">¡¾²Å×Ó¼ÑÈË¡¿Ïàå¦ÒÔÄ­ ËÕéøÎªËýÐ´Ê«´Ê×î¶à</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/21/n11603172.htm">´óÌÆÉ®ÈË¾«Í¨ÊõÊý Ô¤ÑÔ×Ô¼ºµÄ½á¾Ö</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/21/n11670767.htm">Ó¡¶È¹ÖÄÐ°®³ÔÍÁ Ã¿Ìì1¹«½ïÁ¬³Ô20Äê</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/21/n11670660.htm">ÂÞÂí±Ø³ÔÌðµã Æ·³¢ÓÀºãÖ®³ÇµÄÎÂÈá</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/21/n11671153.htm">ÌðÃÛµÄ×ÌÎ¶¡°Å£ÔþÌÇ¡±´©Ô½Ê±¿ÕµÄÉíÊÀÖ®ÃÕ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/21/n11671903.htm">1ÃÀÔª×¡Ò»Íí ÈÕ±¾ÂÃ¹Ý³öÆæÕÐÀ¿¿Í Ë­À´ÌôÕ½£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/21/n11671997.htm">¾­³£·¢ÉÕµÁº¹ 6Ö¢×´¾¯ÌèÂýÐÔÁÜ°ÍÏ¸°û°×Ñª²¡</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/21/n11672097.htm">¡¾ÐÂÎÅ¿´µã¡¿´óÅú¸ÛÈË±»ËÍÖÐ£¿±±¾©»òÃÎËéÏã¸Û</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/20/n11669474.htm">¡¾ÐÂÎÅ¿´µã¡¿Ïã¸ÛÈËÈ¨·¨4Òªµã ±±¾©×îµ£ÐÄÊ²Ã´</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/21/n11670217.htm">¡¾ÅÄ°¸¾ªÆæ¡¿Ö£ÎÄ½ÜÔâ±Æ¹© ´óÂ½¾Ð·´ËÍÖÐ²ÎÓëÕß</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/20/n11669745.htm">Ö£ÎÄ½ÜÍ¸Â¶£º³ÉÅúÏã¸Û¿¹ÒéÕßÒÉ±»ËÍ´óÂ½¹ØÑº</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/19/n11666670.htm">ÖÚÒÕÈËÓëÎÞ¹ú½çÒ½Éú¸îÏ¯ Íõ×ÚÒ¢£º²»»áÔÙ¾èÇ®</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/20/n11669474.htm">¡¾ÐÂÎÅ¿´µã¡¿Ïã¸ÛÈËÈ¨·¨4Òªµã ±±¾©×îµ£ÐÄÊ²Ã´</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/19/n11666670.htm">ÖÚÒÕÈËÓëÎÞ¹ú½çÒ½Éú¸îÏ¯ Íõ×ÚÒ¢£º²»»áÔÙ¾èÇ®</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/20/n11667615.htm">¶ÅãëÔó½Ò½¨ÖÆÅÉÈ°½µÂß¼­£º³ÐÈÏ¾¯±©µ«²»Ö¹±©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/20/n11669806.htm">ÃÀ²ÎÔºÍ¨¹ýÏã¸Û·¨°¸ ºÎÔÏÊ«£º¸ÛÈËÕý¸Ä±äÊÀ½ç</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/19/n11667290.htm">46Ëê²ÌÉÙ·ÒÈýÌ¥²ú×Ó ÕÅ½úÉ¹È«¼Ò¸£±¨Ï²Ñ¶</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/20/n11668036.htm">Ïã¸Û·éÑÌ±éµØ ¶ÔÕÕÂÞÎÄ39ÄêÇ°µÄ¸è¾¹Èç´ËÐ´Êµ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/12/12/21/n3758652.htm">ÉÆÓëÃÀµÄºÏÒ»£ºÀ­ì³¶ûµÄ¡¶Ê¥Ä¸×Ó¡·</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/17/n11661605.htm">¡¾ÀúÊ·»Øíø¡¿´óÎÁÒß£º¸Ä³¯»»´úµÄÇ°×à</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/16/n11660363.htm">ÖÐ¹²ÆÆ»µÐÔÍÚ¾òÃ÷Ê®ÈýÁê Òý·¢¹îÒìÊÂ¼þ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/11/n11649041.htm">¡¾²Å×Ó¼ÑÈË¡¿Ïàå¦ÒÔÄ­ ËÕéøÎªËýÐ´Ê«´Ê×î¶à</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/21/n11603172.htm">´óÌÆÉ®ÈË¾«Í¨ÊõÊý Ô¤ÑÔ×Ô¼ºµÄ½á¾Ö</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/18/6/21/n10502866.md#1">å‡å¡‘ä¸èƒ½ç­‰ å°çŽ¯å›¢ï¼šåˆ«è®©æ–¹ä¾¿æˆä¸ºåœ°çƒå¡‘ä¾¿</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/19/6/26/n11347251.md#1">ç¦ç”¨å¡‘èƒ¶å¸ç®¡ å°é™å¡‘æ–°åˆ¶7æœˆä¸Šè·¯</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/19/8/8/n11440116.md#1">å‡å¡‘æ˜¯å›½é™…è¶‹åŠ¿ å°çŽ¯ç½²æŽ¨â€œä¸ä¸€å®šè¦ç”¨å…æ´—é¤å…·â€</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/19/9/10/n11511791.md#1">ç»å¸¸ä½¿ç”¨å…æ´—ç­·å’Œçº¸æ¯ï¼Ÿå…¶å®žæ˜¯èŠ±é’±ä¹°åžƒåœ¾</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/19/10/18/n11595976.md#1">å¤§å•–ç‚¸é¸¡ å¡‘èƒ¶è¢‹è£…çƒ­é£Ÿ å°å¿ƒåƒå‡ºå­å®«å†…è†œç™Œ</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12241185.md#1">çœ‹å‡†å°æ¹¾åŠå¯¼ä½“å‰æ™¯ æ³•åˆ¶é€ å•†åŠ ç æŠ•èµ„10äº¿</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12241139.md#1">æ³°æ™¤å£«é«˜æ•™å…¬å¸ƒæ½œåŠ›å¤§å­¦  å°æ¹¾11æ ¡ä¸Šæ¦œ</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12241135.md#1">æ‹›æ‰‹è¾£å°æ´¾çº¿ä¸Šå…¥å…š  å°ä¸­ç»¿è¥æ·»2178ç”ŸåŠ›å†›</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12240821.md#1">æ²»ç†æ½­å­å¤–å›´åˆ†æ´ªé“ å·¥ç¨‹å…«æœˆå³å°†åŠ¨å·¥</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12238742.md#1">ç–«æƒ…çƒ§å…³ç¨Žé€’å¢ž  é”€ä¸­èŒ‚è°·æŸ‘å¼ºåŒ–è½¬å†…é”€</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wdlxhh2447/djy/blob/master/gb/19/11/22/n11673260.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/wdlxhh2447/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/wdlxhh2447/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/wdlxhh2447/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">ç¾Žå‚è®®å‘˜ï¼šä¸­å…±åˆ»æ„æŽ§åˆ¶æ–°å† ç—…æ¯’ä¿¡æ¯æµåŠ¨</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/18/n10154324.md#1" target="_blank">æ¨å®ï¼šä¸­å…±å¤§å¹´æœŸé—´æ´—è„‘å›½äººå§‹äºŽå»¶å®‰æ—¶æœŸ</a></li><li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/7/4/n3627160.md#1" target="_blank">å¿ƒæ¹–ï¼šä¸­å…±æ˜¯ç ´åé“å¾·çš„ç½ªé­ç¥¸é¦–</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12240778.md#1">æ—¥ç±å¥³ç”ŸæŸ“ç–« å°æ¹¾é‡‡æ£€213äººæŠ—ä½“ ç»“æžœå‡ºç‚‰</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12239553.md#1">è´µå·žå¤§å·´21æ­» ä¼ å¸æœºæ˜¯é€€ä¼å†›äººã€æ‹†è¿æˆ·</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/3/n12231462.md#1">ã€ç‹¬å®¶ã€‘ä¹ è¿‘å¹³æ€¯æ­¥å†›è¥çš„èƒŒåŽ</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12238373.md#1">ã€ä¸€çº¿é‡‡è®¿ã€‘è´µå·žé«˜è€ƒå¤§å·´å æ°´è‡³å°‘21æ­»</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12239450.md#1">FBIååœ¨ç¾ŽåŽäººï¼šå¦‚è¢«å¼ºè¿«å›žå›½ å‘ç¾Žå›½æŠ¥å‘Š</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/6/n12236320.md#1">60å²æ¨è´µåªšæ™•çœ©å‘ä½œ åè½®æ¤…å°±åŒ»æ£€æŸ¥</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/6/n12237412.md#1">æ”¶6å²å¥³å„¿é€çŽ«ç‘°èŠ±èŒ¶ å­™ä¿ªç›´å‘¼èˆä¸å¾—å–</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12239433.md#1">å¤å‡ºä¸é¡ºè½¬å½“ç½‘çº¢ï¼ŸèŒƒå†°å†°æŠ–éŸ³æ˜µç§°å¼•çƒ­è®®</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/6/n12236838.md#1">æµ™æ±Ÿå«è§†é«˜ç®¡çˆ†å·¨é¢å—è´¿ å‘¨å†¬é›¨å—ç‰µè¿žæŒ¨è½°</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/6/n12237074.md#1">41å²ç”·æ˜ŸæŸ“ç–«é­æˆªè‚¢ æ²»ç–—æ•°æœˆä»ä¸æ•Œç—…é­”</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/6/n12237076.md#1">å¼ºåˆ¶äº”ä¸ªå­©å­æˆ’â€œç½‘ç˜¾â€ ç»“æžœéœ‡æƒŠå¦ˆå¦ˆ</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/4/23/n12056338.md#1">æ¸…æœä¸–ç•Œé¦–å¯Œä¼ç§‰é‰´ ç¼”é€ æ¬§ç¾Žå•†ç•Œä¼ è¯´</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/5/27/n12141489.md#1">ã€åº·ç†™å¤§å¸ã€‘è¿œèµ´æœ”æ¼  ä¸‰å¾è‘›å°”ä¸¹</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/2/n12227327.md#1">1972å¹´è’‹ç»å›½å‘è¡¨ã€Šåå…±å¤å›½çš„æ€»ç›®æ ‡ç»ä¸æ”¹å˜ã€‹</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/6/n12236101.md#1">çºµæ¨ªç ´è§£ï¼šé¢„è¨€ä¸Žäººç”Ÿï¼ˆä¸‹ï¼‰</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/qtwlwd303/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/qtwlwd303/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/11/22/n11673260.htm">çŽ¯ä¿é¤åŽ…æ•°é‡å±…å†    è®®å‘˜åŠžæ¡Œè®¥:å‡å¡‘å–Šå‡çš„</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/qtwlwd303/djy/blob/master/gb/19/11/22/n11673260.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/qtwlwd303/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/qtwlwd303/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/qtwlwd303/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
